# test_agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/agent_app/: config.py  logging_config.py  main.py
src/agent_app/core/: __init__.py  agent.py  messages.py  steps.py
src/agent_app/interfaces/: __init__.py  base.py  cli.py
src/agent_app/llm/: __init__.py  base.py  exceptions.py  openai_compatible.py
src/agent_app/memory/: __init__.py  base.py  recent_messages.py
src/agent_app/tools/: __init__.py  base.py  registry.py
src/agent_app/tools/basic/: __init__.py  current_time.py  text_stats.py
